# snapshot_prediction

./: .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml  run_replication.sh
commit_data/: 4catalyzer_found_reversions.csv  MagicMirrorOrg_MagicMirror_reversions.csv  adriantoine_enzyme-to-json_reversions.csv  airbnb_react-sketchapp_reversions.csv  all-contributors_app_reversions.csv  ankurk91_vue-loading-overlay_reversions.csv  ankurk91_vue-toast-notification_reversions.csv  ant-design_ant-design-pro_reversions.csv  anuraghazra_github-readme-stats_reversions.csv  arackaf_customize-cra_reversions.csv  arb_celebrate_reversions.csv  asyncapi_generator_reversions.csv  auth0_lock_reversions.csv  awslabs_diagram-maker_reversions.csv  azz_styled-css-grid_reversions.csv  babel_babel-upgrade_reversions.csv  babel_minify_reversions.csv  bamlab_flashlight_reversions.csv  banga_git-split-diffs_reversions.csv  beekai-oss_react-simple-animate_reversions.csv  benchmark-action_github-action-benchmark_reversions.csv  bluebill1049_react-simple-img_reversions.csv  bottenderjs_messaging-apis_reversions.csv  capitalone_react-native-pathjs-charts_reversions.csv  carloscuesta_gitmoji-cli_reversions.csv  casesandberg_react-color_reversions.csv  changesets_changesets_reversions.csv  cloudflare_cf-ui_reversions.csv  cloudflare_wrangler2_reversions.csv  codesandbox_codesandboxer_reversions.csv  cwise89_react-detect-offline_reversions.csv  data-client_data-client_reversions.csv  davidkpiano_xstate_reversions.csv  deanmcpherson_react-native-sortable-listview_reversions.csv  (+155 more)
(+566 files in other folders)
