[project]
name = "snapshot_package"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.7.0,<2.0.0",
    "transformers>=4.52.4,<5.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "pandas>=2.3.0,<3.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "tf-keras>=2.19.0,<3.0.0",
    "tensorflow>=2.20.0,<3.0.0; sys_platform == 'darwin'",
    "tensorflow[and-cuda]>=2.20.0,<3.0.0; sys_platform == 'linux'",
    "pygit2<1.19",
    "accelerate>=1.12.0,<2.0.0",
    "datasets>=4.8.2,<5.0.0",
    "peft>=0.18.1,<0.19.0",
    "trl>=1.0.0,<2.0.0",
    "torch>=2.11.0,<3.0.0"
]

[tool.uv]
package = false